--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@ionic/angular": "^8.0.0",
+    "@types/node": "^22.5.4",
+    "angular-calendar": "^0.31.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "date-fns": "^2.28.0",
     "express": "^4.19.2",
     "ionicons": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -58,7 +61,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.0"
+    "typescript": "^5.5.4"
   },
   "description": "An Ionic project",
   "main": "karma.conf.js",
