--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor/haptics": "^6.0.1",
     "@ionic/angular": "^8.0.0",
     "@types/node": "^22.5.4",
     "angular-calendar": "^0.31.1",
