--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
     "@capacitor/barcode-scanner": "^1.0.1",
-    "@capacitor/core": "6.1.2",
+    "@capacitor/core": "^6.1.2",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
@@ -34,6 +34,7 @@
     "angular-calendar": "^0.31.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cordova-android": "^13.0.0",
     "date-fns": "^2.28.0",
     "express": "^4.19.2",
     "ionicons": "^7.0.0",
@@ -55,7 +56,7 @@
     "@angular/cli": "18.2.9",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
-    "@capacitor/cli": "6.1.2",
+    "@capacitor/cli": "^6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
